--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -1851,22 +1851,27 @@ form.rowFormTn  .personal-info-form-btn.photo-up-sec-2-box-btn {
 }
 /*usama*/
 .vec-box {
-    background: #3f3f3f;
+    background: #202543cc;
     color: white;
 }
-
+.vec-box .btn-primary {
+    color: #fff;
+    background-color: #202543;
+    border-color: #f7f7f7;
+    padding: 1rem 1rem;
+}
 .vec-box h1 {
-    background: #ffe900;
+    background: #202543;
     width: 200px;
     margin-top: 20px;
 }
 .vec-box {
-    height: 170px;
-        margin-bottom: 10px;
+    height: 200px;
+    margin-bottom: 10px;
 }
 
 .vec-box img {
-    height: 170px;
+    height: 200px;
 }
 
 .vec-box button.btn.btn-primary.ms-4 {
@@ -2023,6 +2028,18 @@ header .nav-link, header .nav-link:hover {
 header .nav-link:focus, .nav-link:hover {
     color: #fff;
 }
+section.sec-2.productPageTn .form-group {
+    margin-bottom: 15px;
+}
+section.sec-2.productPageTn .col-lg-12.col-md-12 {
+    overflow-x: auto;
+}
 
+table.table.table-striped {
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 820px;
+    width: 880px;
+}
 /*hamza css */
 
