--- a/public/backend/admin/assets/css/responsive.css
+++ b/public/backend/admin/assets/css/responsive.css
@@ -1,11 +1,55 @@
 .cvf_btn span{
     padding: 8px 20px;
 }
+.admin_dashboard .breadcrumb-header{
+    float:none !important;
+}
+.admin_dashboard .breadcrumb{
+    justify-content: end;
+}
 footer.footer_copyright p {
     margin-bottom: 0;
 }
+.vehicle_data thead th {
+    width: auto !important;
+}
+.vehicle_data thead th:nth-child(3) {
+    width: 180px !important;
+}
+.vehicle_data thead th .dataTable-sorter {
+    padding-right: 16px;
+}
+.vehicle_data thead th:last-child {
+    width: 150px !important;
+}
+.vehicle_data tbody td img{
+    object-fit:cover;
+}
+a.action_btn {
+    display: block;
+}
+
+a.action_btn span {
+    display: block;
+}
+
+a.action_btn:nth-child(2) {
+    margin: 5px 0;
+}
+.dealer_vehicle_images img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    padding-bottom: 20px;
+}
+
+
+
 @media(max-width:1750px){
-    
+    .vehicle_data thead th .dataTable-sorter {
+        font-size: 14px;
+    }
+
 }
 
 @media(max-width:1599px){
@@ -33,6 +77,9 @@ footer.footer_copyright p {
         width: 80px;
         height: 80px;
         object-fit: cover;
+    }
+    .fs-head {
+        font-size: 26px;
     }
 
 }
@@ -62,22 +109,33 @@ footer.footer_copyright p {
 
 }
 
-@media(max-width:992px){
-    .approved-dealers {
-    white-space: nowrap;
-}
-
-.approved-dealers thead a {
-    padding-right: 20px;
-}
-
-}
 
 @media(max-width:991px){
+    
+    .approved-dealers {
+        white-space: nowrap;
+    }
+
+.approved-dealers thead a {
+        padding-right: 20px;
+    }
     .tables_admin_data tbody td img {
         width: 70px;
         height: 70px;
     }
+    .vehicle_data thead{
+        white-space: nowrap;
+    }
+    .fs-head {
+        font-size: 20px;
+    }
+    .vehicle_form label {
+    font-size: 14px;
+}
+.vehicle_form .card-header {
+    padding-bottom: 0;
+}
+
 }
 
 @media(max-width:767px){
@@ -113,6 +171,13 @@ footer.footer_copyright p{
 .tables_admin_data a.dataTable-sorter {
     padding-right: 20px;
 }
+.admin_dashboard .breadcrumb {
+    justify-content: start;
+}
+.fs-head {
+    font-size: 18px;
+}
+
 
 }
 
@@ -141,9 +206,18 @@ footer.footer_copyright p{
     .cvf_btn span {
         float: none !important;
         width: 100%;
-        padding: 8px 0;
+        padding: 8px 10px;
         margin-top: 10px;
         font-size: 13px;
     }
+    .admin_dashboard .dataTable-wrapper .dataTable-search {
+        float: none !important;
+        width: 100%;
+    }
+    
+    .admin_dashboard .dataTable-wrapper .dataTable-search .dataTable-input {
+        width: 100%;
+    }
+
 
 }
