--- a/public/backend/admin/assets/css/responsive.css
+++ b/public/backend/admin/assets/css/responsive.css
@@ -42,6 +42,13 @@ a.action_btn:nth-child(2) {
     object-fit: cover;
     padding-bottom: 20px;
 }
+.car_img_wraper img {
+    width: 100%;
+    height: 220px;
+    object-fit: cover;
+    display: block;
+    margin-bottom: 30px;
+}
 
 
 
@@ -80,6 +87,10 @@ a.action_btn:nth-child(2) {
     }
     .fs-head {
         font-size: 26px;
+    }
+    .tables_admin_data thead th,
+    .tables_admin_data tbody td{
+        font-size:13px;
     }
 
 }
@@ -135,6 +146,21 @@ a.action_btn:nth-child(2) {
 .vehicle_form .card-header {
     padding-bottom: 0;
 }
+.add_btn {
+    font-size: 14px;
+}
+.car_img_wraper img {
+    height: 150px;
+}
+.car_img_wraper h5 {
+    font-size: 16px !important;
+}
+.tables_admin_data.dealers {
+    white-space: nowrap;
+}
+.tables_admin_data.dealers th a {
+    padding-right: 20px;
+}
 
 }
 
@@ -164,11 +190,14 @@ footer.footer_copyright p{
 .tables_admin_data {
     white-space: nowrap;
 }
+.table_wraper.card-body {
+    overflow-x: scroll;
+}
 .tables_admin_data tbody td img {
     width: 60px;
     height: 60px;
 }
-.tables_admin_data a.dataTable-sorter {
+.tables_admin_data a.dataTable-sorter  {
     padding-right: 20px;
 }
 .admin_dashboard .breadcrumb {
@@ -177,6 +206,22 @@ footer.footer_copyright p{
 .fs-head {
     font-size: 18px;
 }
+.student-profile .card .card-header .profile_img {
+    width: 90px !important;
+    height: 90px !important;
+}
+.profile_detail p {
+    font-size: 14px !important;
+    text-align: center;
+}
+.btn-modal span {
+    display: inline-block !important;
+}
+
+.btn-modal i {
+    display: none !important;
+}
+
 
 
 }
@@ -218,6 +263,12 @@ footer.footer_copyright p{
     .admin_dashboard .dataTable-wrapper .dataTable-search .dataTable-input {
         width: 100%;
     }
+    .profile_info {
+    font-size: 14px !important;
+}
+.add_btn {
+    font-size: 12px;
+}
 
 
 }
