--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -2238,3 +2238,49 @@ section.sec-review {
 .simple-pagination .next.current {
 	background:#009688;
 }
+
+
+/*Sell My Car Check Form*/
+.check_area input {
+    margin-bottom: 15px !important;
+}
+.check_area .show_error {
+    display: block;
+    padding: 5px;
+    background: #7977a2;
+    max-width: 50%;
+    text-align: center;
+    color: #fff !important;
+    margin-bottom: 10px;
+    border-radius: 4px;
+    font-size: 14px;
+}
+
+/*End*/
+
+.btn_success {
+    padding: 6px 12px;
+    font-size: 13px;
+    background: #7977a2;
+    border: none;
+    transition: all .4s ease-in;
+}
+.btn_success:hover {
+    background: #403f5c;
+}
+
+.btn_danger {
+    padding: 6px 12px;
+    font-size: 13px;
+    background: #333;
+    border: none;
+    transition: all .4s ease-in;
+}
+.btn_danger:hover {
+    background: #000 ;
+}
+
+.info_txt {
+    font-size: 14px;
+}
+
