--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -2290,3 +2290,30 @@ section.sec-review {
     margin-bottom: 10px;
     padding-left: 20px;
 }
+
+
+/*Loader Css*/
+div#myProgress {
+    position: fixed;
+    background: #191738;
+    width: 100%;
+    height: 100%;
+    z-index: 99;
+    color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+div#myBar {
+    width: 10%;
+    height: 20px;
+    background-color: #04AA6D;
+    text-align: center;
+    /* To center it horizontally (if you want) */
+    line-height: 20px;
+    /* To center it vertically */
+    color: white;
+    font-size: 12px;
+}
