--- a/public/frontend/seller/assets/style.css
+++ b/public/frontend/seller/assets/style.css
@@ -2304,16 +2304,21 @@ div#myProgress {
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    transform-origin: top;
+    transition: all .4s ease-in;
+    
 }
-
 div#myBar {
-    width: 10%;
-    height: 20px;
+    max-width: 300px;
+    width: 100%;
+    text-align: center;
+    backgrond: #f5f5f5;
+}
+div#myBar #bar {
+    width: 0%;
+    height: 3px;
     background-color: #04AA6D;
     text-align: center;
-    /* To center it horizontally (if you want) */
-    line-height: 20px;
-    /* To center it vertically */
-    color: white;
-    font-size: 12px;
+    margin: 10px 0;
+    display:block;
 }
