--- a/public/frontend/dealers/assets/css/style.css
+++ b/public/frontend/dealers/assets/css/style.css
@@ -1509,6 +1509,7 @@ section.sec-2.productPageTn.requested-vehicles .col-lg-12.col-md-12 {
     background: #7977a2;
     padding: 3px 20px;
     border-radius: 100px;
+    text-transform: uppercase;
 }
 
 .p-cate-list .p-location {
@@ -1628,7 +1629,7 @@ section.sec-2.productPageTn.requested-vehicles .col-lg-12.col-md-12 {
     line-height: 1.4;
 }
 
-.hw-wraper .col-md-3:not(:last-child) .hw-box .icon-box:after{
+.hw-wraper .col-lg-3:not(:last-child) .hw-box .icon-box:after{
     width: 100%;
     border: 2px dashed #7977a2;
     position: absolute;
@@ -1776,4 +1777,20 @@ section.sec-2.productPageTn.requested-vehicles .col-lg-12.col-md-12 {
 }
 
 
+/* End */
+
+
+
+/* Dealer Inner Banner */
+.dealer-banner {
+    padding: 170px 0;
+    background: linear-gradient(to right, #202543 30%, #0000ff00 60%), url(../image/images/dashboard-bg.png);
+    background-size: cover;
+    background-position: center;
+}
+.dealer-banner .banner-content p {
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 1.2;
+}
 /* End */
